<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PresentTeacher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_students">StudentsActivity</string>
    <string name="action_add_new_class">Add New Class</string>
    <string name="title_activity_new_class">NewClassActivity</string>
    <string name="hint_class_name">Enter Class Name</string>
    <string name="hint_subject_name">Enter Subject </string>
    <string name="hint_batch_name">Enter Batch </string>
    <string name="hint_semester_name">Enter Semester </string>
    <string name="class_label">Class</string>
    <string name="subject_label">Subject</string>
    <string name="batch_label">Batch</string>
    <string name="semester_label">Semester</string>
    <string name="button_new_class_save">Save</string>
    <string name="button_new_class_cancel">Cancel</string>
    <string name="title_activity_create_student">CreateStudent</string>
    <string name="action_add_student">Add Student</string>
    <string name="hint_student_id">Enter Student Id</string>
    <string name="hint_roll_no">Enter Roll No </string>
    <string name="hint_student_name">Enter Student Name </string>
    <string name="student_id_label">Student Id</string>
    <string name="student_roll_no_label">Roll No</string>
    <string name="student_name_label">Student Name</string>
    <string name="button_new_student_save">Save</string>
    <string name="button_new_student_cancel">Cancel</string>
    <string name="title_activity_stud">StudActivity</string>
    <string name="radio_button_absent">Absent</string>
    <string name="radio_button_present">Present</string>

</resources>
