<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/NewClass_ScrollView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
<LinearLayout android:layout_width="fill_parent"
    android:orientation="vertical"
    android:layout_height="fill_parent">
    <LinearLayout android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_height="fill_parent">

    <TextView
        android:id="@+id/class_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_label"
        android:textSize="10pt">
    </TextView>
    <EditText
        android:id="@+id/class_name_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_class_name"
        android:inputType="text" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_height="fill_parent">
        <TextView
            android:id="@+id/subject_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject_label"
            android:textSize="10pt">
        </TextView>
    <EditText
        android:id="@+id/subject_name_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_subject_name"
        android:inputType="text" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_height="fill_parent">
        <TextView
            android:id="@+id/batch_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/batch_label"
            android:textSize="10pt">
        </TextView>
    <EditText
        android:id="@+id/batch_name_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_batch_name"
        android:inputType="text" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_height="fill_parent">
        <TextView
            android:id="@+id/semester_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semester_label"
            android:textSize="10pt">
        </TextView>
    <EditText
        android:id="@+id/semester_name_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_semester_name"
        android:inputType="text" />
        </LinearLayout>
    <Button
        android:id="@+id/ButtonSaveClass"
        android:layout_height="wrap_content"
        android:text="@string/button_new_class_save"
        android:onClick="saveClass"
        android:layout_width="fill_parent">
    </Button>
</LinearLayout>
</ScrollView>
